Added HeroService for dependency injection

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,6 @@
     <script async data-pub-inline src="packages/browser/dart.js"></script>
 </head>
 <body>
-    <hero-form>Loading...</hero-form>
+    <my-heroes>Loading...</my-heroes>
 </body>
 </html>
