Added simple example Logger service

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,6 @@
     <script async data-pub-inline src="packages/browser/dart.js"></script>
 </head>
 <body>
-    <my-heroes>Loading...</my-heroes>
+    <my-app>Loading...</my-app>
 </body>
 </html>
