--- a/lib/heroes/hero_form_component.html
+++ b/lib/heroes/hero_form_component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Hero Form</h1>
-    <form>
+    <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
         {{diagnostic}}
         <div class="form-group">
             <label for="name">Name</label>
@@ -9,7 +9,7 @@
         </div>
         <div class="form-group">
             <label for="alterEgo">Alter Ego</label>
-            <input type="text" class="form-control"
+            <input type="text" class="form-control" required
                    [(ngModel)]="model.alterEgo">
         </div>
         <div class="form-group">
@@ -19,6 +19,6 @@
                 <option *ngFor="let p of powers" [value]="p">{{p}}</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" [disabled]="!heroForm.form.valid">Submit</button>
     </form>
 </div>
