--- a/lib/heroes/hero_form_component.html
+++ b/lib/heroes/hero_form_component.html
@@ -1,4 +1,4 @@
-    <p style="font-style: italic;">Preview {{model}}</p>
+<p style="font-style: italic;">Preview {{model}}</p>
     <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
         <div class="form-group">
             <label for="name">Name</label>
@@ -22,6 +22,10 @@
                 <option *ngFor="let p of powers" [value]="p">{{p}}</option>
             </select>
             <div [hidden]="power.valid" class="alert alert-danger">Must provide a power!</div>
+        </div>
+        <div class="form-group" *ngIf="heroService.isAuthorized">
+            <label for="isSecret">Top Secret:</label>
+            <input type="button" ngControl="isSecret" [ngModel]="model.isSecret" (click)="model.isSecret=!model.isSecret">
         </div>
         <button type="submit" class="btn btn-default" [disabled]="!heroForm.form.valid">Submit</button>
     </form>
