Push live demo to gh-pages

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <title>Yo Yo Yo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <script async src="main.dart" type="application/dart"></script>
-    <script async data-pub-inline src="packages/browser/dart.js"></script>
+    <script async="" src="main.dart.js"></script>
+    
 </head>
 <body>
     <my-app>Loading...</my-app>
-</body>
-</html>
+
+</body></html>
