Fixed app base href attribute breaking when app not at the top level of a site

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Yo Yo Yo</title>
+    <base href=".">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <script async src="main.dart" type="application/dart"></script>
